Put single quotes around language strings containing double quotes.

--- a/languages/ca.ini
+++ b/languages/ca.ini
@@ -24,7 +24,7 @@ account_checkouts_overdue = "Préstecs vençuts"
 account_has_alerts = "Teniu avisos pendents"
 account_normal_checkouts = "Exemplars retirats"
 account_requests_available = "Disponible per recollir"
-account_requests_in_transit = "En "trànsit cap a la biblioteca de recollida"
+account_requests_in_transit = 'En "trànsit cap a la biblioteca de recollida'
 account_requests_other = "Altre estat"
 Add a Library Card = "Afegir un nou carnet"
 Add a Library Card using login = "Afegir carnet amb inici de sessió"
@@ -76,7 +76,7 @@ All Fields = "Tots els camps"
 All Pages Loaded = "S'han carregat totes les pàgines"
 All Text = "Tot el text"
 alphabrowse_matches = "Resultats"
-alphabrowselink_html = "Revisar registres per %%index%% desde fins <a href="%%url%%">%%from%%</a>."
+alphabrowselink_html = 'Revisar registres per %%index%% desde fins <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Pregunta sempre"
 An error has occurred = "S'ha produït un error"
 An error occurred during execution; please try again later. = "S'ha produït un error durant el procés; si us plau espera una estona i torna a provar-ho."
@@ -97,7 +97,7 @@ authentication_error_admin = "No podem iniciar la vostra sessió en aquests mome
 authentication_error_blank = "La informació de registre no pot estar en blanc."
 authentication_error_creation_blocked = "No estàs autoritzat per crear un usuari."
 authentication_error_denied = "Les credencials no coincideixen! Accés denegat."
-authentication_error_email_not_verified_html = "La vostra adreça de correu electrònic encara no s'ha verificat. Comproveu el filtre de correu brossa per obtenir el missatge de verificació. Si és necessari, podem <a href="%%url%%">tornar a enviar el correu electrònic de verificació</a>."
+authentication_error_email_not_verified_html = 'La vostra adreça de correu electrònic encara no s'ha verificat. Comproveu el filtre de correu brossa per obtenir el missatge de verificació. Si és necessari, podem <a href="%%url%%">tornar a enviar el correu electrònic de verificació</a>.'
 authentication_error_expired = "Sol·licitud d'autentificació ha caducar."
 authentication_error_in_progress = "La petició d' inici de sessió ja està en procés. Si us plau proveu més tard"
 authentication_error_invalid = "Inici de sessió no vàlid -- torneu-ho a intentar."
@@ -277,7 +277,7 @@ confirm_hold_cancel_all_text = "Desitgeu cancel·lar totes les reserves actuals?
 confirm_hold_cancel_selected_text = "Desitgeu cancel·lar les reserves seleccionades?"
 confirm_ill_request_cancel_all_text = "Vols cancelar totes les peticions de prèstec interibliotecari?"
 confirm_ill_request_cancel_selected_text = "Vols cancelar la selecció de petitions de prèstec interbibliotecari?"
-confirm_new_password = "Confirma "la nova contrasenya"
+confirm_new_password = 'Confirma "la nova contrasenya'
 confirm_renew_all_text = "Vols renovar tots els teus préstecs?"
 confirm_renew_selected_text = "Cols renovar els préstecs seleccionats?"
 confirm_storage_retrieval_request_cancel_all_text = "Vols cancelar les teves peticions?"
@@ -346,7 +346,7 @@ Displaying the top = "Visualitzant la part superior"
 Document Inspector = "Document Inspector"
 Document Type = "Tipus de document"
 DOI = "DOI"
-doi_detected_html = "La vostra cerca sembla que conté un DOI. Feu clic aquí per consultar la disponibilitat del recurs: <a href="%%url%%">%%doi%%</a>"
+doi_detected_html = 'La vostra cerca sembla que conté un DOI. Feu clic aquí per consultar la disponibilitat del recurs: <a href="%%url%%">%%doi%%</a>'
 Draw Search Box = "Dibuixar quadre de cerca"
 draw_searchbox_end = "Solta el ratolí per deixar de dibuixar."
 draw_searchbox_start = "Clica i solta per dibuixar un rectangle."
@@ -385,10 +385,10 @@ Email address is invalid = "L’adreça de correu electrònic no és vàlida"
 Email Record = "Registre de correu electrònic"
 Email this = "Enviar per correu electrònic aquest"
 Email this Search = "Enviar per correu electrònic aquesta cerca"
-email_change_pending_html = "Teniu un canvi de correu electrònic pendent a %%pending%%. Feu clic a l'enllaç del correu electrònic de verificació enviat a aquesta adreça per completar el canvi. Si és necessari, podem <a href="%%url%%"> Reenvia el correu electrònic de verificació </a>."
+email_change_pending_html = 'Teniu un canvi de correu electrònic pendent a %%pending%%. Feu clic a l'enllaç del correu electrònic de verificació enviat a aquesta adreça per completar el canvi. Si és necessari, podem <a href="%%url%%"> Reenvia el correu electrònic de verificació </a>.'
 email_failure = "Error - El missatge no es pot enviar"
 email_link = "Enllaç"
-email_login_desc = "Si us plau, utilitzeu el següent enllaç per iniciar la sessió. Si no heu iniciat l'inici de sessió, pot ignorar aquest missatge amb seguretat. Tingueu en compte que l'enllaç només és vàlid per a un temps limitat i només amb el dispositiu que heu utilitzat per introduir l'adreça de correu electrònic."."
+email_login_desc = 'Si us plau, utilitzeu el següent enllaç per iniciar la sessió. Si no heu iniciat l'inici de sessió, pot ignorar aquest missatge amb seguretat. Tingueu en compte que l'enllaç només és vàlid per a un temps limitat i només amb el dispositiu que heu utilitzat per introduir l'adreça de correu electrònic.".'
 email_login_link = "Enllaç per iniciar la sessió: <%%url%%>"
 email_login_link_sent = "Hem enviat un enllaç d'inici de sessió a la vostra adreça de correu electrònic. Pot arribar en breu a la bústia. Si no rebeu l'enllaç en breu, comproveu també el filtre de correu brossa."
 email_login_requested = "S’ha sol·licitat l’inici de sessió amb l’adreça de correu electrònic a %%title%%."
@@ -549,7 +549,7 @@ history_delete = "Eliminar"
 history_delete_link = "Eliminar"
 history_empty_search = "Res (cerca buida)"
 history_limits = "Límits"
-history_login_html = "Si us plau <a href="%%url%%">inicia sessió</a> per veure les teves cerques."
+history_login_html = 'Si us plau <a href="%%url%%">inicia sessió</a> per veure les teves cerques.'
 history_no_saved_searches = "No hi ha cap cerca desada."
 history_no_searches = "Actualment no hi ha cerques a l’historial."
 history_purge = "Netejar les meves cerques no guardades"
@@ -594,16 +594,16 @@ hold_error_update_failed = "La reserva no es pot actualitzar."
 hold_expires = "Caduca"
 hold_frozen = "Suspés (temporalment)"
 hold_frozen_through = "Suspés (temporalment) through %%date%%"
-hold_frozen_through_date_invalid = "Si us plau afegeix una data vàlida per data  "suspensió temporal" ""
+hold_frozen_through_date_invalid = 'Si us plau afegeix una data vàlida per data  "suspensió temporal" "'
 hold_in_process = "En procés"
 hold_invalid_pickup = "Heu introduït una localització de recollida no vàlida. Torneu-ho a intentar"
-hold_invalid_request_group = "La petició de reserva no es vàlida. S"i us plau torni a provar-ho"
+hold_invalid_request_group = 'La petició de reserva no es vàlida. S"i us plau torni a provar-ho'
 hold_items_available = "No es pot col·locar perquè els elements estan disponibles."
 hold_login = "Iniciar sessió informació per reserva"
 hold_place = "Solicitar lloc"
 hold_place_fail_missing = "Ha fallat la vostra petició. Algunes dades s’han perdut. Contacteu amb el taulell de circulació per sol·licitar ajuda."
-hold_place_success_html = "Petició correcta. <a href="%%url%%">Reserves</a>."
-hold_profile_html = "Per accedir a informació dels fons en temps real, si us plau configureu el seur <a href="%%url%%">Perfil del Catàleg de la Biblioteca</a>."
+hold_place_success_html = 'Petició correcta. <a href="%%url%%">Reserves</a>.'
+hold_profile_html = 'Per accedir a informació dels fons en temps real, si us plau configureu el seur <a href="%%url%%">Perfil del Catàleg de la Biblioteca</a>.'
 hold_proxied_by = "Demanat per"
 hold_proxied_for = "Demanat per a"
 hold_queue_position = "Posició a la cua"
@@ -611,7 +611,7 @@ hold_record_already_on_loan = "Ja teniu el registre a préstec"
 hold_request_group = "Demanar a"
 hold_requested_group = "Demanat desde"
 hold_required_by = "No sol·licitat més enllà de"
-hold_required_by_date_before_start_date = "Si us plau afegeix  un data "Necessari el" posterior a la data d'inici"
+hold_required_by_date_before_start_date = 'Si us plau afegeix  un data "Necessari el" posterior a la data d'inici'
 hold_required_by_date_invalid = "Si us plau afegeix una data  'Necessari el' "
 hold_required_by_optional = "No necessari després de (optional)"
 hold_start_date = "Data inici"
@@ -650,10 +650,10 @@ ill_request_pick_up_library = "Biblioteca de recollida"
 ill_request_pick_up_location = "Localització de recullida"
 ill_request_place_fail_missing = "Ha fallat la vostra petició. Algunes dades s’han perdut. Contacteu amb el taulell de circulació per sol·licitar ajuda."
 ill_request_place_success = "Petició correcta"
-ill_request_place_success_html = "Petició correcta <a href="%%url%%">Peticions de prèstec interbibliotecari</a>."
+ill_request_place_success_html = 'Petició correcta <a href="%%url%%">Peticions de prèstec interbibliotecari</a>.'
 ill_request_place_text = "Demana un prèstec interbibliotecari"
 ill_request_processed = "Processat"
-ill_request_profile_html = "Per informació sobre la petició de prèstec, si us plau configura la seva <a href="%%url%%">configuració de catàleg de biblioteca</a>."
+ill_request_profile_html = 'Per informació sobre la petició de prèstec, si us plau configura la seva <a href="%%url%%">configuració de catàleg de biblioteca</a>.'
 ill_request_submit_text = "Demanar"
 Illustrated = "Il·lustrat"
 ils_account_create_error = "El vostre compte no s’ha pogut crear al nostre sistema de gestió de biblioteques. Si el problema continua, poseu-vos en contacte amb la vostra biblioteca."
@@ -803,7 +803,7 @@ My Holds = "Les meves reserves"
 My Profile = "El meu perfil"
 Narrow Search = "Afineu la vostra cerca"
 navigate_back = "Back"
-nearby_items = "Exemplars a prop "%%title%%""
+nearby_items = 'Exemplars a prop "%%title%%"'
 New Item Feed = "Alerta nous ítems"
 New Item Search = "Cerca nous ítems"
 New Item Search Results = "Nous ítems resultants de la cerca"
@@ -833,7 +833,7 @@ no_description = "Descripció no disponible."
 no_email_address = "Falta l'adreça de correu electrònic."
 no_items_selected = "No hi ha ítems seleccionats"
 nohit_active_filters = "Heu aplicat una o més facetes a aquesta cerca. Si elimineu algun filtre obtindreu més resultats.."
-nohit_change_tab = "Has estar cercana a "%%activeTab%%". Jauría de cerca en altera pestañees per obtener más resultaste:"
+nohit_change_tab = 'Has estar cercana a "%%activeTab%%". Jauría de cerca en altera pestañees per obtener más resultaste:'
 nohit_filters = "Filtres aplicats a aquesta cerca:"
 nohit_heading = "No s'han trobat resultats!"
 nohit_lookfor_html = "La vostra cerca - <strong>%%lookfor%%</strong> - no coincideix cap recurs."
@@ -934,7 +934,7 @@ od_info_unavail = "Aquesta informació no està disponible actualment."
 od_is_checkedout = "Tens aquest llibre en préstec.  Venciment el  %%due_date%%."
 od_is_on_hold = "Tens reservat aquest llibre."
 od_loans = "Overdrive Loans"
-od_mycontent_help = "FPer obtenir informació sobre i descarregar els títols, vegeu <a href="%%url%%">Overdrive Help</a>."
+od_mycontent_help = 'FPer obtenir informació sobre i descarregar els títols, vegeu <a href="%%url%%">Overdrive Help</a>.'
 od_none_found = "No s'ha trobat cap títol."
 od_return_failure = "Aquest títol no es pot tornar."
 od_return_success = "Aquest títol ha estat retornat."
@@ -1094,7 +1094,7 @@ Refine Results = "Refinar resultats"
 Region = "Àmbit geogràfic"
 relais_available = "Aquest registre està disponible amb prèstec interbibliotecari. Voldira demanar-ho?"
 relais_checking = "Comprovant disponivilitat..."
-relais_error_html = "Hi ha hagut un problema amb la seva sol·licitut. Clickeu <a href="%%url%%" target='new'>here</a> per demanar-lo via préstec interbibliotecari."
+relais_error_html = 'Hi ha hagut un problema amb la seva sol·licitut. Clickeu <a href="%%url%%" target='new'>here</a> per demanar-lo via préstec interbibliotecari.'
 relais_request = "Solicitud de préstec interbibliotecari"
 relais_requesting = "Demanant..."
 relais_search = "Cerca de préstec interbibliotecari"
@@ -1124,7 +1124,7 @@ renew_selected = "Renovar ítems seleccionats"
 renew_success = "Renovació correcte"
 Renewed = "Renovat"
 Request full text = "Demanar el text complet"
-request_in_transit = "En "trànsit cap a la biblioteca de recollida"
+request_in_transit = 'En "trànsit cap a la biblioteca de recollida'
 request_place_text = "Fer una sol·licitut"
 request_submit_text = "Executar petició"
 Requests = "Peticions"
@@ -1265,10 +1265,10 @@ storage_retrieval_request_invalid_pickup = "Heu introduït una localització de 
 storage_retrieval_request_issue = "Data"
 storage_retrieval_request_place_fail_missing = "Ha fallat la vostra petició. Algunes dades s’han perdut. Contacteu amb el taulell de circulació per sol·licitar ajuda."
 storage_retrieval_request_place_success = "Petició correcta"
-storage_retrieval_request_place_success_html = "Petició correcta <a href="%%url%%">Peticions al magatzem</a>."
+storage_retrieval_request_place_success_html = 'Petició correcta <a href="%%url%%">Peticions al magatzem</a>.'
 storage_retrieval_request_place_text = "Solicitar una petició al magatzem"
 storage_retrieval_request_processed = "Processat"
-storage_retrieval_request_profile_html = "Per fer una petició al magatzem, demani <a href="%%url%%">el carnet de la biblioteca</a>."
+storage_retrieval_request_profile_html = 'Per fer una petició al magatzem, demani <a href="%%url%%">el carnet de la biblioteca</a>.'
 storage_retrieval_request_reference = "Referència"
 storage_retrieval_request_selected_item = "Registres seleccionas"
 storage_retrieval_request_submit_text = "Solicitar lloc"
@@ -1344,7 +1344,7 @@ total_saved_items = "Registres total guardats"
 total_tags = "Etiquetes totals"
 total_users = "Usuaris totals"
 Transliterated Title = "Títol transliterat"
-tree_search_limit_reached_html = "La seva cerca ha retornat massa registres per veure'ls a l'arbre de col·leccions. Veure els primers <b>%%limit%%</b> exemplars. Per una cerca completa cliqueu <a id="fullSearchLink" href="%%url%%" target="_blank">aquí.</a>"
+tree_search_limit_reached_html = 'La seva cerca ha retornat massa registres per veure'ls a l'arbre de col·leccions. Veure els primers <b>%%limit%%</b> exemplars. Per una cerca completa cliqueu <a id="fullSearchLink" href="%%url%%" target="_blank">aquí.</a>'
 trending_items_channel_title = "més populars"
 unique_tags = "Etiquetes úniques"
 University Library = "Biblioteca universitària"
@@ -1372,7 +1372,7 @@ username_only_letters_numbers_and_basic_punctuation = "Lletres, números i puntu
 username_only_numeric = "Només números"
 verification_done = "La teva adreça de correu electrònic s'ha verificat correctament."
 verification_email_change_sent = "S'han enviat instruccions de verificació de l'adreça de correu electrònic a la nova adreça de correu electrònic. Heu de verificar l'adreça abans que el canvi tingui efecte."
-verification_email_notification = ""S'ha fet una sol·licitud per verificar la vostra adreça de correu electrònic del vostre compte amb %%library%%."
+verification_email_notification = '"S'ha fet una sol·licitud per verificar la vostra adreça de correu electrònic del vostre compte amb %%library%%.'
 verification_email_sent = "Les instruccions de verificació de l'adreça de correu electrònic s'han enviat a l'adreça de correu electrònic registrada amb aquest compte."
 verification_email_subject = "Verificació de correu electrònic VuFind"
 verification_email_url_pretext = "Podeu verificar la vostra adreça de correu electrònic en aquest URL: <%%url%%>"
