--- a/languages/cy.ini
+++ b/languages/cy.ini
@@ -79,7 +79,7 @@ authentication_error_admin = "Ni fedrwn eich mewngofnodi yr adeg hwn. Cysylltwch
 authentication_error_blank = "Ni all eich gwybodaeth fewngofnodi fod yn wag"
 authentication_error_creation_blocked = "Nid oes gennych ganiatâd i greu cyfrif."
 authentication_error_denied = "Nid yw'r cymwysterau yn cyfateb! Ni chaniateir mynediad"
-authentication_error_email_not_verified_html = "Nid yw eich cyfeiriad e-bost wedi'i ddilysu eto. Gwiriwch eich hidlydd sbam am y neges ddilysu. Os yw'n angenrheidiol, gallwn <a href="%%url%%">Ail-anfon yr E-bost Dilysu</a>."
+authentication_error_email_not_verified_html = 'Nid yw eich cyfeiriad e-bost wedi'i ddilysu eto. Gwiriwch eich hidlydd sbam am y neges ddilysu. Os yw'n angenrheidiol, gallwn <a href="%%url%%">Ail-anfon yr E-bost Dilysu</a>.'
 authentication_error_expired = "Mae'r cais dilysu wedi dod i ben."
 authentication_error_in_progress = "Mae'r cais dilysu eisoes yn cael ei brosesu. Rhowch gynnig eto'n ddiweddarach os bydd angen dechrau eto."
 authentication_error_invalid = "Mewngofnodi annilys: rhowch gynnig arall"
@@ -311,7 +311,7 @@ Displaying the top = "Arddangos y brig"
 Document Inspector = "Archwilydd Dogfen"
 Document Type = "Math o Ddogfen"
 DOI = "DOI"
-doi_detected_html = "Ymddengys bod eich chwiliad yn cynnwys DOI. Cliciwch yma i weld argaeledd yr adnodd:<a href="%%url%%">%%doi%%</a>"
+doi_detected_html = 'Ymddengys bod eich chwiliad yn cynnwys DOI. Cliciwch yma i weld argaeledd yr adnodd:<a href="%%url%%">%%doi%%</a>'
 Draw Search Box = "Llunio Blwch Chwilio"
 draw_searchbox_end = "Gadewch y llygoden i fynd i orffen tynnu'r llun."
 draw_searchbox_start = "Cliciwch a llusgwch i dynnu llun o betryal."
@@ -350,7 +350,7 @@ Email address is invalid = "Nid yw'r cyfeiriad E-bost yn ddilys"
 Email Record = "Cofnod E-bost"
 Email this = "E-bostio hwn"
 Email this Search = "E-bostio'r Chwiliad hwn"
-email_change_pending_html = "Mae gennych neges newid e-bost yn aros ar gyfer %% pending%%. Cliciwch ar y ddolen yn yr e-bost dilysu a anfonwyd i'r cyfeiriad hwn i gwblhau'r newid. Os yw'n angenrheidiol, gallwn <a href="%%url%%>Ail-anfon yr E-bost Dilysu</a>."
+email_change_pending_html = 'Mae gennych neges newid e-bost yn aros ar gyfer %% pending%%. Cliciwch ar y ddolen yn yr e-bost dilysu a anfonwyd i'r cyfeiriad hwn i gwblhau'r newid. Os yw'n angenrheidiol, gallwn <a href="%%url%%>Ail-anfon yr E-bost Dilysu</a>.'
 email_failure = "Gwall – Ni Ellir Anfon y Neges"
 email_link = "Cyswllt"
 email_login_desc = "Defnyddiwch y ddolen ganlynol i fewngofnodi. Os nad ydych wedi cychwyn y mewngofnodi hwn, gallwch chi anwybyddu'r neges hon. Sylwer bod y ddolen yn ddilys am amser cyfyngedig yn unig a chyda'r ddyfais a ddefnyddiwyd gennych i nodi'r cyfeiriad e-bost."
@@ -523,8 +523,8 @@ hold_items_available = "Nid oes modd ei roi ar gadw am fod eitemau ar gael. "
 hold_login = "Mewngofnodi am wybodaeth ynghylch daliadau ac adalw"
 hold_place = "Gosod Cais"
 hold_place_fail_missing = "Mae eich cais wedi methu. Roedd peth data ar goll. Cysylltwch â'r ddesg fenthyca am gymorth pellach"
-hold_place_success_html = "Roedd eich cais yn llwyddiannus. <a href="%%url%%">Daliadau ac Adalwadau</a>."
-hold_profile_html = "Am wybodaeth dal a galw'n ôl, rhaid i chi sefydlu <a href=%%url%%">Proffeil Catalog Llyfrgell</a>.""
+hold_place_success_html = 'Roedd eich cais yn llwyddiannus. <a href="%%url%%">Daliadau ac Adalwadau</a>.'
+hold_profile_html = 'Am wybodaeth dal a galw'n ôl, rhaid i chi sefydlu <a href=%%url%%">Proffeil Catalog Llyfrgell</a>."'
 hold_queue_position = "Safle yn y Ciw"
 hold_record_already_on_loan = "Mae'r record eisoes ar fenthyg gennych chi "
 hold_request_group = "Cais oddi wrth"
@@ -564,10 +564,10 @@ ill_request_pick_up_library = "Llyfrgell Casglu"
 ill_request_pick_up_location = "Lleoliad Casglu"
 ill_request_place_fail_missing = "Mae eich cais wedi methu. Roedd peth data ar goll. Cysylltwch â'r ddesg fenthyca am gymorth pellach"
 ill_request_place_success = "Roedd eich cais yn llwyddiannus"
-ill_request_place_success_html = "Roedd eich cais yn llwyddiannus <a href="%%url%%">Ceisiadau am Fenthyciadau Rhwnglyfrgellol</a>."
+ill_request_place_success_html = 'Roedd eich cais yn llwyddiannus <a href="%%url%%">Ceisiadau am Fenthyciadau Rhwnglyfrgellol</a>.'
 ill_request_place_text = "Cyflwyno cais am Fenthyciad Rhwnglyfrgellol"
 ill_request_processed = "Proseswyd"
-ill_request_profile_html = "Am wybodaeth am gais am Fenthyciad Rhwnglyfrgellol, rhaid i chi sefydlu'ch <a href="%%url%%">Proffil Catalog Llyfrgell</a>."
+ill_request_profile_html = 'Am wybodaeth am gais am Fenthyciad Rhwnglyfrgellol, rhaid i chi sefydlu'ch <a href="%%url%%">Proffil Catalog Llyfrgell</a>.'
 ill_request_submit_text = "Cyflwyno'r Cais"
 Illustrated = "Darluniadol"
 ils_account_create_error = "Ni lwyddwyd i greu eich cyfrif ar ein system rheolaeth llyfrgell. Os yw’r broblem yn parhau, cysylltwch â’ch llyfrgell os gwelwch yn dda."
@@ -713,7 +713,7 @@ My Holds = "Fy Naliadau"
 My Profile = "Fy Mhroffil"
 Narrow Search = "Manylu'r Chwiliad"
 navigate_back = "Yn Ôl"
-nearby_items = "Eitemau Ger "%%title%%""
+nearby_items = 'Eitemau Ger "%%title%%"'
 New Item Feed = "Cyflenwad Eitem Newydd"
 New Item Search = "Chwiliad Eitem Newydd"
 New Item Search Results = "Canlyniadau Chwiliad Eitem Newydd"
@@ -742,7 +742,7 @@ no_description = "Mae'n ddrwg gennym, ni ellir dod o hyd i unrhyw awgrymiadau"
 no_email_address = "Cyfeiriad e-bost ar goll."
 no_items_selected = "Ni Ddetholwyd unrhyw Eitemau"
 nohit_active_filters = "Mae un neu fwy o hidlwyr ffasedau wedi'u cymhwyso i'r chwiliad hwn. Os tynnwch rai hidlwyr, efallai y cewch fwy o ganlyniadau."
-nohit_change_tab = "Rydych wedi bod yn chwilio yn y tab "%%activeTab%%". Efallai y dewch o hyd i rywbeth yn un o'r tabiau eraill:"
+nohit_change_tab = 'Rydych wedi bod yn chwilio yn y tab "%%activeTab%%". Efallai y dewch o hyd i rywbeth yn un o'r tabiau eraill:'
 nohit_filters = "Hidlwyr sydd wedi'u gosod i'r chwiliad hwn:"
 nohit_heading = "Dim Canlyniadau!"
 nohit_lookfor_html = "Eich chwiliad - <strong>%%lookfor%%</strong> - ddim yn cyfateb ag unrhyw adnoddau"
@@ -843,7 +843,7 @@ od_info_unavail = "Nid yw'r wybodaeth hon ar gael ar hyn o bryd."
 od_is_checkedout = "Rydych chi wedi benthyca’r y teitl hwn .  Rhaid ei ddychwelyd erbyn %%due-date %%."
 od_is_on_hold = "Mae gennych chi'r teitl hwn ar gadw."
 od_loans = "Benthyciadau Overdrive"
-od_mycontent_help = "Am wybodaeth am y teitlau hyn a chymorth i’w lawrlwytho , gweler <a href="%%url%%>Help Overdrive</a>."
+od_mycontent_help = 'Am wybodaeth am y teitlau hyn a chymorth i’w lawrlwytho , gweler <a href="%%url%%>Help Overdrive</a>.'
 od_none_found = "Ni ddaethpwyd o hyd i deitlau."
 od_return_failure = "Nid oedd modd dychwelyd y teitl hwn."
 od_return_success = "Mae'r teitl hwn wedi'i ddychwelyd."
@@ -974,7 +974,7 @@ Refine Results = "Mireinio'r Canlyniadau"
 Region = "Rhanbarth"
 relais_available = "Mae'r eitem hon ar gael trwy Fenthyciad Rhynglyfrgellol. Hoffech chi wneud cais amdani?"
 relais_checking = "Gwirio argaeledd..."
-relais_error_html = "Cafwyd problem o ran y cais hwn. Cliciwch <a href="%%url%%" target='new'>yma</a> i wneud cais am yr eitem hon gan ddefnyddio gwefan Benthyciad Rhynglyfrgellol."
+relais_error_html = 'Cafwyd problem o ran y cais hwn. Cliciwch <a href="%%url%%" target='new'>yma</a> i wneud cais am yr eitem hon gan ddefnyddio gwefan Benthyciad Rhynglyfrgellol.'
 relais_request = "Cais am Fenthyciad Rhynglyfrgellol"
 relais_requesting = "Gwneud cais am..."
 relais_search = "Chwiliwch Fenthyciadau Rhynglyfrgellol"
@@ -1142,10 +1142,10 @@ storage_retrieval_request_invalid_pickup = "Rhoddwyd lleoliad casglu annilys. Rh
 storage_retrieval_request_issue = "Dyddiad"
 storage_retrieval_request_place_fail_missing = "Mae eich cais wedi methu. Roedd peth data ar goll. Cysylltwch â'r ddesg fenthyca am gymorth pellach"
 storage_retrieval_request_place_success = " Roedd eich cais yn llwyddiannus"
-storage_retrieval_request_place_success_html = "Roedd eich cais yn llwyddiannus <a href="%%url%%">Ceisiadau am Dynnu Eitemau o'r Storfa</a>."
+storage_retrieval_request_place_success_html = 'Roedd eich cais yn llwyddiannus <a href="%%url%%">Ceisiadau am Dynnu Eitemau o'r Storfa</a>.'
 storage_retrieval_request_place_text = "Gosod Cais am Dynnu Eitem o'r Storfa"
 storage_retrieval_request_processed = "Proseswyd"
-storage_retrieval_request_profile_html = "Am wybodaeth am gais am dynnu eitem o'r storfa, rhaid i chi sefydlu'ch <a href="%%url%%">Proffil Catalog Llyfrgell</a>."
+storage_retrieval_request_profile_html = 'Am wybodaeth am gais am dynnu eitem o'r storfa, rhaid i chi sefydlu'ch <a href="%%url%%">Proffil Catalog Llyfrgell</a>.'
 storage_retrieval_request_reference = "Cyfeiriad"
 storage_retrieval_request_selected_item = "Eitem a Ddewiswyd"
 storage_retrieval_request_submit_text = "Gosod Cais"
@@ -1220,7 +1220,7 @@ total_saved_items = "Cyfanswm Eitemau wedi'u Cadw"
 total_tags = "Cyfanswm Tagiau"
 total_users = "Cyfanswm Defnyddwyr"
 Transliterated Title = "Teitl Wedi'i Drawslythrennu"
-tree_search_limit_reached_html = "Roedd gormod o ganlyniadau i'w dangos yn y goeden. Ond yn dangos y <b>%%limit%%</b> eitem gyntaf. I chwilio'r cyfan, cliciwch <a id=fullSearchLink" href="%%url%%" target="_blank">yma.</a>"
+tree_search_limit_reached_html = 'Roedd gormod o ganlyniadau i'w dangos yn y goeden. Ond yn dangos y <b>%%limit%%</b> eitem gyntaf. I chwilio'r cyfan, cliciwch <a id=fullSearchLink" href="%%url%%" target="_blank">yma.</a>'
 trending_items_channel_title = "Eitemau sy'n Trendio"
 unique_tags = "Tagiau Unigryw"
 University Library = "Llyfrgell y Brifysgol"
