--- a/languages/en.ini
+++ b/languages/en.ini
@@ -65,7 +65,7 @@ All Fields = "All Fields"
 All Pages Loaded = "All Pages Loaded"
 All Text = "All Text"
 alphabrowse_matches = "Results"
-alphabrowselink_html = "Browse entries by %%index%% starting from <a href="%%url%%">%%from%%</a>."
+alphabrowselink_html = 'Browse entries by %%index%% starting from <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Always ask me"
 An error has occurred = "An error has occurred"
 An error occurred during execution; please try again later. = "An error occurred during execution; please try again later."
@@ -86,7 +86,7 @@ authentication_error_admin = "We cannot log you in at this time. Please contact 
 authentication_error_blank = "Login information cannot be blank."
 authentication_error_creation_blocked = "You do not have permission to create an account."
 authentication_error_denied = "Credentials do not match! Access denied."
-authentication_error_email_not_verified_html = "Your email address has not been verified yet. Please check your spam filter for the verification message. If necessary, we can <a href="%%url%%">Resend the Verification Email</a>."
+authentication_error_email_not_verified_html = 'Your email address has not been verified yet. Please check your spam filter for the verification message. If necessary, we can <a href="%%url%%">Resend the Verification Email</a>.'
 authentication_error_expired = "The authentication request has expired."
 authentication_error_in_progress = "Authentication request is already being processed. Please try again later if you need to start over."
 authentication_error_invalid = "Invalid login -- please try again."
@@ -336,7 +336,7 @@ Displaying the top = "Displaying the top"
 Document Inspector = "Document Inspector"
 Document Type = "Document Type"
 DOI = "DOI"
-doi_detected_html = "Your search appears to contain a DOI. Click here to check the availability of the resource: <a href="%%url%%">%%doi%%</a>"
+doi_detected_html = 'Your search appears to contain a DOI. Click here to check the availability of the resource: <a href="%%url%%">%%doi%%</a>'
 Draw Search Box = "Draw Search Box"
 draw_searchbox_end = "Release mouse to finish drawing."
 draw_searchbox_start = "Click and drag to select an area."
@@ -376,7 +376,7 @@ Email address is invalid = "Email address is invalid"
 Email Record = "Email Record"
 Email this = "Email this"
 Email this Search = "Email Search"
-email_change_pending_html = "You have a pending email change to %%pending%%. Please click the link in the verification email sent to this address to complete the change. If necessary, we can <a href="%%url%%">Resend the Verification Email</a>."
+email_change_pending_html = 'You have a pending email change to %%pending%%. Please click the link in the verification email sent to this address to complete the change. If necessary, we can <a href="%%url%%">Resend the Verification Email</a>.'
 email_failure = "Error - Message Cannot Be Sent"
 email_link = "Link"
 email_login_desc = "Please use the following link to log in. If you did not initiate login, you may safely ignore this message. Please note that the link is only valid for a limited time and only with the device you used to enter the email address."
@@ -550,7 +550,7 @@ history_delete = "Delete"
 history_delete_link = "Delete"
 history_empty_search = "Anything (empty search)"
 history_limits = "Limits"
-history_login_html = "Please <a href="%%url%%">log in</a> to see your saved searches."
+history_login_html = 'Please <a href="%%url%%">log in</a> to see your saved searches.'
 history_no_saved_searches = "You don't have any saved searches."
 history_no_searches = "There are currently no searches in your history."
 history_purge = "Purge unsaved searches"
@@ -596,7 +596,7 @@ hold_error_update_failed = "The hold could not be updated."
 hold_expires = "Expires"
 hold_frozen = "Frozen (temporarily suspended)"
 hold_frozen_through = "Frozen (temporarily suspended) through %%date%%"
-hold_frozen_through_date_invalid = "Please enter a valid "frozen through" date"
+hold_frozen_through_date_invalid = 'Please enter a valid "frozen through" date'
 hold_in_process = "In process"
 hold_invalid_pickup = "An invalid pick up location was entered. Please try again"
 hold_invalid_request_group = "An invalid hold request group was entered. Please try again"
@@ -604,8 +604,8 @@ hold_items_available = "Cannot place a hold because items are available."
 hold_login = "Login for hold and recall information"
 hold_place = "Place Request"
 hold_place_fail_missing = "Your request failed. Some data was missing. Please contact the circulation desk for further assistance"
-hold_place_success_html = "Your request was successful. <a href="%%url%%">Your Holds and Recalls</a>."
-hold_profile_html = "For hold and recall information, please establish your <a href="%%url%%">Library Catalog Profile</a>."
+hold_place_success_html = 'Your request was successful. <a href="%%url%%">Your Holds and Recalls</a>.'
+hold_profile_html = 'For hold and recall information, please establish your <a href="%%url%%">Library Catalog Profile</a>.'
 hold_proxied_by = "Requested By"
 hold_proxied_for = "Requested For"
 hold_queue_position = "Queue Position"
@@ -613,7 +613,7 @@ hold_record_already_on_loan = "You already have the record on loan"
 hold_request_group = "Request from"
 hold_requested_group = "Requested from"
 hold_required_by = "No longer required after"
-hold_required_by_date_before_start_date = "Please enter a "required by" date later than the start date"
+hold_required_by_date_before_start_date = 'Please enter a "required by" date later than the start date'
 hold_required_by_date_invalid = "Please enter a valid 'required by' date"
 hold_required_by_optional = "No longer required after (optional)"
 hold_start_date = "Start date"
@@ -652,10 +652,10 @@ ill_request_pick_up_library = "Pick Up Library"
 ill_request_pick_up_location = "Pick Up Location"
 ill_request_place_fail_missing = "Your request failed. Some data was missing. Please contact the circulation desk for further assistance"
 ill_request_place_success = "Your request was successful"
-ill_request_place_success_html = "Your request was successful. <a href="%%url%%">Interlibrary Loan Requests</a>."
+ill_request_place_success_html = 'Your request was successful. <a href="%%url%%">Interlibrary Loan Requests</a>.'
 ill_request_place_text = "Place an Interlibrary Loan Request"
 ill_request_processed = "Processed"
-ill_request_profile_html = "For interlibrary loan request information, please establish your <a href="%%url%%">Library Catalog Profile</a>."
+ill_request_profile_html = 'For interlibrary loan request information, please establish your <a href="%%url%%">Library Catalog Profile</a>.'
 ill_request_submit_text = "Place Request"
 Illustrated = "Illustrated"
 ils_account_create_error = "Your account could not be created in our library management system. If the problem persists, please contact your library."
@@ -817,7 +817,7 @@ My Holds = "Holds"
 My Profile = "Profile"
 Narrow Search = "Narrow Search"
 navigate_back = "Back"
-nearby_items = "Items Near "%%title%%""
+nearby_items = 'Items Near "%%title%%"'
 New Item Feed = "New Item Feed"
 New Item Search = "New Item Search"
 New Item Search Results = "New Item Search Results"
@@ -848,7 +848,7 @@ no_email_address = "Email address missing."
 no_items_selected = "No Items were Selected"
 no_proxied_user = "No proxied user (request for yourself)"
 nohit_active_filters = "One or more facet filters have been applied to this search. If you remove filters, you may retrieve more results."
-nohit_change_tab = "You have been searching in the "%%activeTab%%" tab. You may find something in one of the other tabs:"
+nohit_change_tab = 'You have been searching in the "%%activeTab%%" tab. You may find something in one of the other tabs:'
 nohit_filters = "Filters currently applied to this search:"
 nohit_heading = "No Results!"
 nohit_lookfor_html = "Your search - <strong>%%lookfor%%</strong> - did not match any resources."
@@ -949,7 +949,7 @@ od_info_unavail = "This information is currently unavailable."
 od_is_checkedout = "You have this title checked out.  It's due on %%due_date%%."
 od_is_on_hold = "You have this title on hold."
 od_loans = "Overdrive Loans"
-od_mycontent_help = "For information about and help with downloading these titles, see <a href="%%url%%">Overdrive Help</a>."
+od_mycontent_help = 'For information about and help with downloading these titles, see <a href="%%url%%">Overdrive Help</a>.'
 od_none_found = "No titles found."
 od_return_failure = "This title could not be returned."
 od_return_success = "This title has been returned."
@@ -1044,7 +1044,7 @@ profile_update = "Your profile was updated as requested"
 pronounced = "pronounced"
 Provider = "Provider"
 proxied_user = "Place request for proxied user"
-proxy_hold_place_success_html = "Your proxy request was successful. <a href="%%url%%">Your Holds and Recalls</a>."
+proxy_hold_place_success_html = 'Your proxy request was successful. <a href="%%url%%">Your Holds and Recalls</a>.'
 proxy_list_by = "These users are your delegates:"
 proxy_list_description = "A user's delegates have permission to perform some actions on their behalf."
 proxy_list_for = "You are a delegate for these users:"
@@ -1118,7 +1118,7 @@ Refine Results = "Refine Results"
 Region = "Region"
 relais_available = "This item is available through Interlibrary Loan. Would you like to request it?"
 relais_checking = "Checking availability..."
-relais_error_html = "There was a problem with this request. Please request this item using the <a href="%%url%%" target='new'>Interlibrary Loan website</a>."
+relais_error_html = 'There was a problem with this request. Please request this item using the <a href="%%url%%" target='new'>Interlibrary Loan website</a>.'
 relais_request = "Interlibrary Loan Request"
 relais_requesting = "Requesting..."
 relais_search = "Search Interlibrary Loan"
@@ -1300,10 +1300,10 @@ storage_retrieval_request_invalid_pickup = "An invalid pick up location was ente
 storage_retrieval_request_issue = "Date"
 storage_retrieval_request_place_fail_missing = "Your request failed. Some data was missing. Please contact the circulation desk for further assistance"
 storage_retrieval_request_place_success = "Your request was successful"
-storage_retrieval_request_place_success_html = "Your request was successful. <a href="%%url%%">Storage Retrieval Requests</a>."
+storage_retrieval_request_place_success_html = 'Your request was successful. <a href="%%url%%">Storage Retrieval Requests</a>.'
 storage_retrieval_request_place_text = "Place a Storage Retrieval Request"
 storage_retrieval_request_processed = "Processed"
-storage_retrieval_request_profile_html = "For storage retrieval request information, please establish your <a href="%%url%%">Library Catalog Profile</a>."
+storage_retrieval_request_profile_html = 'For storage retrieval request information, please establish your <a href="%%url%%">Library Catalog Profile</a>.'
 storage_retrieval_request_reference = "Reference"
 storage_retrieval_request_selected_item = "Selected item"
 storage_retrieval_request_submit_text = "Place Request"
@@ -1381,7 +1381,7 @@ total_saved_items = "Total Saved Items"
 total_tags = "Total Tags"
 total_users = "Total Users"
 Transliterated Title = "Transliterated Title"
-tree_search_limit_reached_html = "Your search returned too many results to display in the tree. Showing only the first <b>%%limit%%</b> items. For a full search click <a id="fullSearchLink" href="%%url%%" target="_blank">here.</a>"
+tree_search_limit_reached_html = 'Your search returned too many results to display in the tree. Showing only the first <b>%%limit%%</b> items. For a full search click <a id="fullSearchLink" href="%%url%%" target="_blank">here.</a>'
 trending_items_channel_title = "Trending Items"
 unique_tags = "Unique Tags"
 University Library = "University Library"
