--- a/languages/ga.ini
+++ b/languages/ga.ini
@@ -552,7 +552,7 @@ hold_items_available = "Ní féidir coinneáil a chur ar mhíreanna toisc go bhf
 hold_login = "le faisnéis choinneála agus aisghairme a fháil"
 hold_place = "Déan iarratas"
 hold_place_fail_missing = "Theip ar d’iarratas. Bhí roinnt sonraí in easnamh. Déan teagmháil leis an gcuntar riartha le tuilleadh cúnaimh a fháil"
-hold_place_success_html = "D’éirigh le d’iarratas. <a href="%%url%%">Ábhair ar Coimeád agus Athghlaoite agat</a>."
+hold_place_success_html = 'D’éirigh le d’iarratas. <a href="%%url%%">Ábhair ar Coimeád agus Athghlaoite agat</a>.'
 hold_profile_html = "Le faisnéis a fháil maidir le hiarratais choinneála agus aisghairme, comhlánaigh <a href=%%url%%>do Phróifíl catalóige leabharlainne</a>."
 hold_queue_position = "Áit sa scuaine"
 hold_record_already_on_loan = "Tá an taifead ar iasacht agat cheana féin"
