--- a/languages/CreatorRoles/pl.ini
+++ b/languages/CreatorRoles/pl.ini
@@ -239,7 +239,7 @@ pop = "Producent płyt drukarskich"
 ppm = "Czerpacz"
 ppt = "Lalkarz"
 pra = "prezes, Vorstand"
-prc = "process contact" (Kontakt z procesem) ------------------------------> What does it mean? ciąg, kontynuacja kontaktu"
+prc = 'process contact" (Kontakt z procesem) ------------------------------> What does it mean? ciąg, kontynuacja kontaktu'
 prd = "Pracownicy produkcji"
 pre = "Prezenter"
 prf = "Wykonawca"
@@ -252,12 +252,12 @@ prp = "Miejsce produkcji"
 prs = "Projektant produkcji"
 prt = "Drukarz"
 prv = "Dostawca"
-präses = "Preses" s.o. prezes"
+präses = 'Preses" s.o. prezes'
 pta = "Wnioskodawca patentowy"
-pte = "Plaintiff-appellee"   ------------------------------> What does it mean? powód *osoba"
+pte = 'Plaintiff-appellee"   ------------------------------> What does it mean? powód *osoba'
 ptf = "Powód"
 pth = "Właściciel patentu"
-ptt = "Plaintiff-appellant"   ------------------------------> s.o."
+ptt = 'Plaintiff-appellant"   ------------------------------> s.o.'
 pup = "Miejsce publikacji"
 rbr = "Rubrykator"
 rcd = "Producent nagrań"
@@ -277,11 +277,11 @@ rpc = "Producent radiofoniczny"
 rps = "Repozytorium"
 rpt = "Reporter"
 rpy = "Strona odpowiedzialna"
-rse = "Respondent-appellee"   ------------------------------> s.o."
+rse = 'Respondent-appellee"   ------------------------------> s.o.'
 rsg = "Reżyser wznowienia sztuki teatralnej"
 rsp = "Oskarżony"
 rsr = "Restaurator"
-rst = "Respondent-appellant"   ------------------------------> s.o."
+rst = 'Respondent-appellant"   ------------------------------> s.o.'
 rth = "Kierownik zespołu badaczy"
 rtm = "Członek zespołu badaczy"
 sad = "Doradca naukowy"
@@ -322,7 +322,7 @@ tyd = "Projektant czcionki"
 tyg = "Typograf"
 tänzer = "Tancerz"
 uvp = "Miejsce uniwersytetu"
-vac = "Aktor podkładający głos" > lektor"
+vac = 'Aktor podkładający głos" > lektor'
 vdg = "Kamerzysta"
 Verstorb = "Zmarły"
 verstorb = "Zmarły"
