--- a/languages/fr.ini
+++ b/languages/fr.ini
@@ -64,7 +64,7 @@ All Fields = "Tous les champs"
 All Pages Loaded = "Toutes les pages chargées"
 All Text = "Tout le texte"
 alphabrowse_matches = "Résultats"
-alphabrowselink_html = "Parcourir par %%index%% à partir de <a href="%%url%%">%%from%%</a>."
+alphabrowselink_html = 'Parcourir par %%index%% à partir de <a href="%%url%%">%%from%%</a>.'
 Always ask me = "Toujours me demander"
 An error has occurred = "Une erreur est survenue"
 An error occurred during execution; please try again later. = "Erreur lors de l'exécution de la commande. Veuillez réessayer plus tard."
@@ -85,7 +85,7 @@ authentication_error_admin = "Vous ne pouvez pas vous connecter en ce moment. Ve
 authentication_error_blank = "Ces champs ne peuvent être vides."
 authentication_error_creation_blocked = "Vous n'avez pas les droits nécessaires pour créer un compte."
 authentication_error_denied = "Les informations de connexion ne sont pas valides ! Accès refusé."
-authentication_error_email_not_verified_html = "Votre adresse de courriel n'a pas encore été vérifiée. Veuillez chercher dans votre dossier de spams si le message de vérification a été filtré. Si besoin, nous pouvons <a href="%%url%%">renvoyer le courriel de vérification</a>."
+authentication_error_email_not_verified_html = 'Votre adresse de courriel n'a pas encore été vérifiée. Veuillez chercher dans votre dossier de spams si le message de vérification a été filtré. Si besoin, nous pouvons <a href="%%url%%">renvoyer le courriel de vérification</a>.'
 authentication_error_expired = "La demande de connexion a expiré."
 authentication_error_in_progress = "Une demande de connexion est déjà en cours de traitement. Veuillez recommencer plus tard, s'il vous faut relancer le processus."
 authentication_error_invalid = "Erreur de connexion -- veuillez réessayer."
@@ -334,7 +334,7 @@ Displaying the top = "Affichage ascendant"
 Document Inspector = "Inspecteur de document"
 Document Type = "Type de document"
 DOI = "DOI"
-doi_detected_html = "Il semble que votre recherche contienne un DOI. Pour vérifier la disponibilité en ligne de cette ressource, cliquez ici: <a href="%%url%%">%%doi%%</a>"
+doi_detected_html = 'Il semble que votre recherche contienne un DOI. Pour vérifier la disponibilité en ligne de cette ressource, cliquez ici: <a href="%%url%%">%%doi%%</a>'
 Draw Search Box = "Dessiner la boîte de recherche"
 draw_searchbox_end = "Relâchez la souris pour terminer le dessin."
 draw_searchbox_start = "Cliquez et tirez la souris pour tracer un rectangle."
@@ -373,7 +373,7 @@ Email address is invalid = "Cette adresse de courriel n'est pas valide"
 Email Record = "Envoyer la notice par courriel"
 Email this = "Envoyer par courriel"
 Email this Search = "Envoyer cette recherche par courriel"
-email_change_pending_html = "Une demande de modification d'adresse de courriel est en cours pour %%pending%%. Merci de cliquer sur le lien contenu dans le message de vérification qui a été envoyé à cette adresse, afin de valider la modification. Si besoin, nous pouvons <a href="%%url%%">Renvoyer le message de vérification</a>."
+email_change_pending_html = 'Une demande de modification d'adresse de courriel est en cours pour %%pending%%. Merci de cliquer sur le lien contenu dans le message de vérification qui a été envoyé à cette adresse, afin de valider la modification. Si besoin, nous pouvons <a href="%%url%%">Renvoyer le message de vérification</a>.'
 email_failure = "Erreur - Le message n'a pu être envoyé"
 email_link = "Lien"
 email_login_desc = "Merci d'utiliser le lien suivant pour vous connecter. Si vous n'êtes pas à l'origine d'une demande de connexion, veuillez ignorer ce message. Attention, le lien n'est valide que pour une durée limitée, et uniquement avec l'appareil que vous avez utilisé pour saisir l'adresse de courriel."
@@ -545,7 +545,7 @@ history_delete = "Effacer"
 history_delete_link = "Effacer"
 history_empty_search = "Quelque chose (recherche vide)"
 history_limits = "Filtre"
-history_login_html = "Veuillez <a href="%%url%%">vous connecter</a> pour consulter vos recherches sauvegardées."
+history_login_html = 'Veuillez <a href="%%url%%">vous connecter</a> pour consulter vos recherches sauvegardées.'
 history_no_saved_searches = "Vous n'avez pas encore de recherches sauvegardées."
 history_no_searches = "Il n'existe aucune recherche dans votre historique."
 history_purge = "Supprimer les recherches de la session qui n'ont pas été sauvegardées."
@@ -599,8 +599,8 @@ hold_items_available = "La réservation n'est pas possible, car des exemplaires 
 hold_login = "Connectez-vous pour connaître les informations sur les réservations"
 hold_place = "Réserver"
 hold_place_fail_missing = "Votre demande a échoué. Il manquait certaines données. Veuillez contacter la bibliothèque pour plus d'informations"
-hold_place_success_html = "La réservation a bien été enregistrée. <a href="%%url%%">Vos réservations et rappels</a>."
-hold_profile_html = "Pour les réservations et rappels, veuillez créer un <a href="%%url%%">profil dans le catalogue de la bibliothèque</a>."
+hold_place_success_html = 'La réservation a bien été enregistrée. <a href="%%url%%">Vos réservations et rappels</a>.'
+hold_profile_html = 'Pour les réservations et rappels, veuillez créer un <a href="%%url%%">profil dans le catalogue de la bibliothèque</a>.'
 hold_proxied_by = "Demandé par"
 hold_proxied_for = "Demandé pour"
 hold_queue_position = "Place dans la file d'attente"
@@ -647,10 +647,10 @@ ill_request_pick_up_library = "Bibliothèque de retrait"
 ill_request_pick_up_location = "Lieu de retrait"
 ill_request_place_fail_missing = "Votre demande a échoué. Il manquait certaines données. Veuillez contacter la bibliothèque pour plus d'informations"
 ill_request_place_success = "La demande a bien été enregistrée."
-ill_request_place_success_html = "La demande a bien été enregistrée. <a href="%%url%%">Demandes de prêt entre bibliothèques</a>."
+ill_request_place_success_html = 'La demande a bien été enregistrée. <a href="%%url%%">Demandes de prêt entre bibliothèques</a>.'
 ill_request_place_text = "Faire une demande de prêt entre bibliothèques"
 ill_request_processed = "Traité"
-ill_request_profile_html = "Pour les informations sur les demandes de prêt entre bibliothèques, merci de créer un <a href="%%url%%">profil dans le catalogue de la bibliothèque</a>."
+ill_request_profile_html = 'Pour les informations sur les demandes de prêt entre bibliothèques, merci de créer un <a href="%%url%%">profil dans le catalogue de la bibliothèque</a>.'
 ill_request_submit_text = "Faire une demande"
 Illustrated = "Illustré"
 ils_account_create_error = "Votre compte n'a pas pu être créé dans notre système de gestion de bibliothèque. Si le problème persiste, veuillez contacter votre bibliothèque."
@@ -800,7 +800,7 @@ My Holds = "Mes réservations"
 My Profile = "Mon profil"
 Narrow Search = "Restreindre la recherche"
 navigate_back = "Retour"
-nearby_items = "Documents proches de "%%title%%""
+nearby_items = 'Documents proches de "%%title%%"'
 New Item Feed = "Flux RSS des nouveautés"
 New Item Search = "Recherche des nouveautés"
 New Item Search Results = "Résultats de la recherche des nouveautés"
@@ -831,7 +831,7 @@ no_email_address = "Il manque une adresse de courriel."
 no_items_selected = "Aucun élément n'est sélectionné"
 no_proxied_user = "Pas de demande pour autrui (la demande est pour vous-même)"
 nohit_active_filters = "Au moins un filtre a été appliqué à cette recherche. Enlevez ce filtre pour obtenir plus de résultats."
-nohit_change_tab = "Vous avez recherché dans l'onglet "%%activeTab%%". Vous trouverez peut-être des résultats supplémentaires dans les autres onglets :"
+nohit_change_tab = 'Vous avez recherché dans l'onglet "%%activeTab%%". Vous trouverez peut-être des résultats supplémentaires dans les autres onglets :'
 nohit_filters = "Filtres appliqués à cette recherche"
 nohit_heading = "Aucun résultat."
 nohit_lookfor_html = "Votre recherche - <strong>%%lookfor%%</strong> - ne correspond à aucune ressource."
@@ -932,7 +932,7 @@ od_info_unavail = "Cette information n'est pas disponible pour le moment."
 od_is_checkedout = "Vous avez emprunté ce titre. Il doit être retourné pour le %%due_date%%."
 od_is_on_hold = "Vous avez fait une demande pour ce titre."
 od_loans = "Emprunts Overdrive"
-od_mycontent_help = "Pour trouver des informations et une aide pour le téléchargement de ces titres, veuillez consulter <a href="%%url%%">l'aide Overdrive</a>."
+od_mycontent_help = 'Pour trouver des informations et une aide pour le téléchargement de ces titres, veuillez consulter <a href="%%url%%">l'aide Overdrive</a>.'
 od_none_found = "Aucun titre n'a été trouvé."
 od_return_failure = "Ce titre ne peut pas être retourné."
 od_return_success = "Ce titre a été retourné."
@@ -1027,7 +1027,7 @@ profile_update = "Votre profil a été mis à jour comme souhaité"
 pronounced = "prononcé"
 Provider = "Fournisseur"
 proxied_user = "Faire une réservation pour un autre utilisateur"
-proxy_hold_place_success_html = "Votre demande pour un tiers a réussi. <a href="%%url%%">Vos demandes de réservations et rappels</a>."
+proxy_hold_place_success_html = 'Votre demande pour un tiers a réussi. <a href="%%url%%">Vos demandes de réservations et rappels</a>.'
 Public = "Publique"
 public_list_indicator = "Publique"
 Publication = "Publication"
@@ -1097,7 +1097,7 @@ Refine Results = "Affiner les résultats"
 Region = "Région"
 relais_available = "Ce document est disponible par le Prêt entre bibliothèques. Voulez-vous faire une demande ?"
 relais_checking = "Vérification de la disponibilité..."
-relais_error_html = "Un problème est arrivé pendant votre demande. Cliquez <a href="%%url%%" target='new'>ici</a> pour demander ce document en utilisant le site Web du Prêt entre bibliothèques."
+relais_error_html = 'Un problème est arrivé pendant votre demande. Cliquez <a href="%%url%%" target='new'>ici</a> pour demander ce document en utilisant le site Web du Prêt entre bibliothèques.'
 relais_request = "Demande de prêt entre bibliothèques"
 relais_requesting = "Demande en cours..."
 relais_search = "Recherche pour le Prêt entre bibliothèques"
@@ -1270,10 +1270,10 @@ storage_retrieval_request_invalid_pickup = "Le lieu de retrait saisi est incorre
 storage_retrieval_request_issue = "Date"
 storage_retrieval_request_place_fail_missing = "Votre demande a échoué. Il manquait certaines données. Veuillez contacter la bibliothèque pour plus d'informations"
 storage_retrieval_request_place_success = "La demande de communication en magasin a bien été enregistrée."
-storage_retrieval_request_place_success_html = "La demande de communication en magasin a bien été enregistrée. <a href="%%url%%">Demandes de communication en magasin</a>."
+storage_retrieval_request_place_success_html = 'La demande de communication en magasin a bien été enregistrée. <a href="%%url%%">Demandes de communication en magasin</a>.'
 storage_retrieval_request_place_text = "Demander la communication d'un document en magasin"
 storage_retrieval_request_processed = "Traité"
-storage_retrieval_request_profile_html = "Pour les informations sur les demandes de communication en magasin, merci de créer un <a href="%%url%%">profil dans le catalogue de la bibliothèque</a>."
+storage_retrieval_request_profile_html = 'Pour les informations sur les demandes de communication en magasin, merci de créer un <a href="%%url%%">profil dans le catalogue de la bibliothèque</a>.'
 storage_retrieval_request_reference = "Référence"
 storage_retrieval_request_selected_item = "Document sélectionné"
 storage_retrieval_request_submit_text = "Demander la communication d'un document en magasin"
@@ -1349,7 +1349,7 @@ total_saved_items = "Nombre total d'éléments sauvegardés"
 total_tags = "Nombre total de tags"
 total_users = "Nombre total d'utilisateurs"
 Transliterated Title = "Titre translittéré"
-tree_search_limit_reached_html = "Trop de réponses pour l'affichage arborescent. Seuls les <b>%%limit%%</b> premiers éléments sont affichés. Pour une recherche complète, cliquez <a id="fullSearchLink" href="%%url%%" target="_blank">ici.</a>"
+tree_search_limit_reached_html = 'Trop de réponses pour l'affichage arborescent. Seuls les <b>%%limit%%</b> premiers éléments sont affichés. Pour une recherche complète, cliquez <a id="fullSearchLink" href="%%url%%" target="_blank">ici.</a>'
 trending_items_channel_title = "Documents populaires"
 unique_tags = "Tags uniques"
 University Library = "Bibliothèque universitaire"
