--- a/languages/sl.ini
+++ b/languages/sl.ini
@@ -372,8 +372,8 @@ hold_invalid_pickup = "Napačna lokacija za prevzem. Poizkusite ponovno"
 hold_login = "Prijava za informacije o izposojenih in rezerviranih"
 hold_place = "Postavite zahtevo"
 hold_place_fail_missing = "Vaša zahteva ni bila uspešna. Manjkajo nekateri podatki. Za nadaljno pomoč vprašajte v izposoji"
-hold_place_success_html = "Vaša zahteva je bila uspešna. <a href="%%url%%">Vaše izposojene in rezervirane</a>."
-hold_profile_html = "Za informacije o izposojenih in rezerviranih ustvarite vaš <a href="%%url%%">Library Catalog Profile</a>."
+hold_place_success_html = 'Vaša zahteva je bila uspešna. <a href="%%url%%">Vaše izposojene in rezervirane</a>.'
+hold_profile_html = 'Za informacije o izposojenih in rezerviranih ustvarite vaš <a href="%%url%%">Library Catalog Profile</a>.'
 hold_queue_position = "V vrsti"
 hold_required_by = "Ni potreben po"
 hold_success = "Vaša zahteva je bila uspešna"
@@ -498,7 +498,7 @@ more_options_ellipsis = "Več možnosti..."
 Most Recent Received Issues = "Nazadnje pridobljeni izvodi"
 Multiple Call Numbers = "Več signatur"
 Multiple Locations = "Več lokacij"
-Musical Score = "Glasb""
+Musical Score = 'Glasb"'
 My Favorites = "Moje priljubljene"
 My Fines = "Moje zamudnine"
 My Holds = "Moje izposojene"
@@ -788,7 +788,7 @@ total_resources = "Vsi viri"
 total_saved_items = "Vsi shranjeni predmeti"
 total_tags = "Vse oznake"
 total_users = "Vsi uporabniki"
-tree_search_limit_reached_html = "Preveč je rezultato za prikaz. Prikaz samo prvih <b>%%limit%%</b> rezultatov. Za celotno iskanje pritisnite <a id="fullSearchLink" href="%%url%%" target="_blank">here.</a>"
+tree_search_limit_reached_html = 'Preveč je rezultato za prikaz. Prikaz samo prvih <b>%%limit%%</b> rezultatov. Za celotno iskanje pritisnite <a id="fullSearchLink" href="%%url%%" target="_blank">here.</a>'
 unique_tags = "Enkratne oznake"
 University Library = "Univerzitetna knjižnica"
 Unknown = "Neznan"
