--- a/languages/tr.ini
+++ b/languages/tr.ini
@@ -118,7 +118,7 @@ All Fields = "Tüm Alanlar"
 All Pages Loaded = "Bütün Sayfalar Yüklendi"
 All Text = "Tüm Metin"
 alphabrowse_matches = "Sonuçlar"
-alphabrowselink_html = "<a href="%%url%%">%%from%%</a> başlayarak %%index%% tarafından oluşturulan girişleri listeleyin."
+alphabrowselink_html = '<a href="%%url%%">%%from%%</a> başlayarak %%index%% tarafından oluşturulan girişleri listeleyin.'
 Always ask me = "Her zaman bana sor"
 An error has occurred = "Bir Hata Oldu"
 An error occurred during execution; please try again later. = "Yürütme sırasında bir hata oluştu; lütfen tekrar deneyin."
@@ -139,7 +139,7 @@ authentication_error_admin = "Yönetici Girişi Onaylanmadı"
 authentication_error_blank = "Boş Yönetici Girişi Hatası"
 authentication_error_creation_blocked = "Bir hesap oluşturmak için izniniz yok."
 authentication_error_denied = "Onaylanmadı"
-authentication_error_email_not_verified_html = "E-posta adresiniz henüz doğrulanmadı. Lütfen doğrulama mesajı için spam filtrenizi ve kutusunu kontrol ediniz. Eğer gerekli ise, <a href="%%url%%"> bağlantısından doğrulama e-postası göderebiliriz.</a>."
+authentication_error_email_not_verified_html = 'E-posta adresiniz henüz doğrulanmadı. Lütfen doğrulama mesajı için spam filtrenizi ve kutusunu kontrol ediniz. Eğer gerekli ise, <a href="%%url%%"> bağlantısından doğrulama e-postası göderebiliriz.</a>.'
 authentication_error_expired = "Kimlik doğrulama isteğinin süresi doldu."
 authentication_error_in_progress = "Kimlik doðrulama isteði zaten iþleniyor. Yeniden baþlamanýz gerekiyorsa lütfen daha sonra tekrar deneyin."
 authentication_error_invalid = "Geçersiz giriş -- Lütfen tekrar deneyin"
@@ -388,7 +388,7 @@ Displaying the top = "Üst gösteriliyor"
 Document Inspector = "Doküman Denetcisi"
 Document Type = "Doküman Türü"
 DOI = "DOI"
-doi_detected_html = "Aramanızın bir DOI içerdiği görülüyor. Kaynağın kullanılabilirliğini kontrol etmek için burayı tıklayın: <a href="%%url%%">%%doi%%</a>"
+doi_detected_html = 'Aramanızın bir DOI içerdiği görülüyor. Kaynağın kullanılabilirliğini kontrol etmek için burayı tıklayın: <a href="%%url%%">%%doi%%</a>'
 Draw Search Box = "Arama Kutusu Düzenle"
 draw_searchbox_end = "Çizimi bitirmek için fareyi serbest bırakın."
 draw_searchbox_start = "Dikdörtgen çizmek için tıklayın ve sürükleyin."
@@ -427,7 +427,7 @@ Email address is invalid = "Eposta adresi geçerli değil"
 Email Record = "Kaydı eposta ile gönder"
 Email this = "E-posta Gönder"
 Email this Search = "Aramayı e-posta ile gönder"
-email_change_pending_html = "Beklemede %%Pending%% olan bir e-posta deðiþikliði isteðiniz var. Lütfen deðiþikliði tamamlamak için bu adrese gönderilen doðrulama e-postasýndaki baðlantýya týklayýn. Gerekirse, <a href="%%url%%"> Doðrulama E-postasýný Yeniden Gönderebiliriz</a>."
+email_change_pending_html = 'Beklemede %%Pending%% olan bir e-posta deðiþikliði isteðiniz var. Lütfen deðiþikliði tamamlamak için bu adrese gönderilen doðrulama e-postasýndaki baðlantýya týklayýn. Gerekirse, <a href="%%url%%"> Doðrulama E-postasýný Yeniden Gönderebiliriz</a>.'
 email_failure = "Eposta Hatası"
 email_link = "Eposta Bağlantısı"
 email_login_desc = "Lütfen giriþ yapmak için aþaðýdaki baðlantýyý kullanýn. Giriþ yapmadýysanýz, bu mesajý güvenle yok sayabilirsiniz. Lütfen baðlantýnýn yalnýzca sýnýrlý bir süre için geçerli olduðunu ve yalnýzca e-posta adresini girmek için kullandýðýnýz cihaz için geçerli olduðunu unutmayýn."
@@ -498,7 +498,7 @@ external_auth_scopes_none = "yok"
 external_auth_unauthorized = "Lisanslı materyale erişme yetkiniz yok"
 external_auth_unauthorized_desc = "Giriş yönteminiz lisanslı materyale erişim sağlamıyor. Lütfen çıkış yapın ve başka bir yöntem kullanarak giriş yapın."
 facet_list_empty = "Uygun veri yok"
-facet_list_for = "%%field%%" için bölüm listesi"
+facet_list_for = '%%field%%" için bölüm listesi'
 FAQs = "SSS"
 fav_delete = "Seçilmiş Favorileri Sil"
 fav_delete_deleting = "Favorileriniz silinecek."
@@ -599,7 +599,7 @@ history_delete = "Sil"
 history_delete_link = "Bağlantıyı sil"
 history_empty_search = "Herşey (boş arama)"
 history_limits = "Limitler"
-history_login_html = "Kayıtlı aramalarınızı görmek için lütfen <a href="%%url%%">oturum açın</a>."
+history_login_html = 'Kayıtlı aramalarınızı görmek için lütfen <a href="%%url%%">oturum açın</a>.'
 history_no_saved_searches = "Henüz herhangi bir arama kaydetmediniz."
 history_no_searches = "Henüz hiç arama yapmamışsınız."
 history_purge = "Kaydetmediğim aramaları listeden sil"
@@ -645,7 +645,7 @@ hold_error_update_failed = "Ayırtma güncellenemedi."
 hold_expires = "Bitiş Tarihi"
 hold_frozen = "Donduruldu (geçici olarak askıya alındı)"
 hold_frozen_through = "%%date%% tarihine kadar donduruldu (geçici olarak askıya alındı)"
-hold_frozen_through_date_invalid = "Lütfen geçerli bir "dondurulmuş" tarihi girin"
+hold_frozen_through_date_invalid = 'Lütfen geçerli bir "dondurulmuş" tarihi girin'
 hold_in_process = "İşlemde"
 hold_invalid_pickup = "Geçersiz yer girildi. Lütfen tekrar deneyin"
 hold_invalid_request_group = "Geçersiz grup isteği girildi. Lütfen tekrar deneyin"
@@ -653,8 +653,8 @@ hold_items_available = "Öğeler mevcut olduğu için bekletme yapılamıyor."
 hold_login = "Giriş Ayırın ve bilgileri tekrar çağırın"
 hold_place = "İstek yeri"
 hold_place_fail_missing = "İsteğiniz başarısız. Bazı veriler eksik. Lütfen detayli bilgi için ödünç verme masasına başvurunuz."
-hold_place_success_html = "İsteğiniz başarılı oldu. <a href="%%url%%">Rezerve Ettiğim Materyaller</a>."
-hold_profile_html = "Bilgileri saklamak ve hatırlamak için, lütfen <a href="%%url%%">kütüphane profiliniz ile bağlantı kurun</a>."
+hold_place_success_html = 'İsteğiniz başarılı oldu. <a href="%%url%%">Rezerve Ettiğim Materyaller</a>.'
+hold_profile_html = 'Bilgileri saklamak ve hatırlamak için, lütfen <a href="%%url%%">kütüphane profiliniz ile bağlantı kurun</a>.'
 hold_proxied_by = "İstekte bulunan"
 hold_proxied_for = "Kendisi için istenen"
 hold_queue_position = "Sıra durumu"
@@ -662,7 +662,7 @@ hold_record_already_on_loan = "Zaten bu kaydı ödünç almışsınız"
 hold_request_group = "İstek Formu"
 hold_requested_group = "Talep"
 hold_required_by = "Artık gerekli değil"
-hold_required_by_date_before_start_date = "Lütfen başlangıç ​​tarihinden sonra bir "gerektiren" tarihi girin"
+hold_required_by_date_before_start_date = 'Lütfen başlangıç ​​tarihinden sonra bir "gerektiren" tarihi girin'
 hold_required_by_date_invalid = "Lütfen geçerli bir 'gerektiren' tarihi girin"
 hold_required_by_optional = "Artık gerekli değil (isteğe bağlı)"
 hold_start_date = "Başlangıç ​​tarihi"
@@ -701,10 +701,10 @@ ill_request_pick_up_library = "İstek Kütüphanesi"
 ill_request_pick_up_location = "İstek Yeri"
 ill_request_place_fail_missing = "İsteğiniz başarısız. Bazı veriler eksik. Lütfen detayli bilgi için ödünç verme masasına başvurunuz."
 ill_request_place_success = "İsteğiniz başarılı oldu"
-ill_request_place_success_html = "İsteğiniz başarılı oldu <a href="%%url%%">Kütüphaneler Arası Ödünç Alma İstekleri</a>."
+ill_request_place_success_html = 'İsteğiniz başarılı oldu <a href="%%url%%">Kütüphaneler Arası Ödünç Alma İstekleri</a>.'
 ill_request_place_text = "Kütüphaneler arası ödünç alma isteğinde bulunun"
 ill_request_processed = "İşlendi"
-ill_request_profile_html = "Kütüphaneler arası ödünç alma istek bilgileri için, Lütfen <a href="%%url%%">Kütüphane Katalog Profiline Tıklayınız</a>."
+ill_request_profile_html = 'Kütüphaneler arası ödünç alma istek bilgileri için, Lütfen <a href="%%url%%">Kütüphane Katalog Profiline Tıklayınız</a>.'
 ill_request_submit_text = "İstekte bulunun"
 Illustrated = "Resimli"
 ils_account_create_error = "Hesabınız kütüphane yönetim sistemimizde oluşturulamadı. Sorun devam ederse, lütfen kütüphanenize başvurun."
@@ -854,7 +854,7 @@ My Holds = "Rezervelerim"
 My Profile = "Profilim"
 Narrow Search = "Aramayı Daralt"
 navigate_back = "Geri"
-nearby_items = "Yakın Kayıtlar "%%title%%""
+nearby_items = 'Yakın Kayıtlar "%%title%%"'
 New Item Feed = "Yeni Kayıt Beselemesi"
 New Item Search = "Yeni Kayıt Ara"
 New Item Search Results = "Yeni Kayıt Arama Sonucu"
@@ -864,7 +864,7 @@ New Title = "Yeni Başlık"
 new_email_success = "E-posta adresiniz baþarýyla deðiþtirildi"
 new_password = "Yeni Şifre"
 new_password_success = "Şifreniz başarı ile değiştirildi"
-new_results_heading = "En yeni sonuçlar "%%count%%"
+new_results_heading = 'En yeni sonuçlar "%%count%%'
 new_user_welcome_subject = "%%library%% deki yeni hesabınız"
 new_user_welcome_text = "%%library%% ye Hoş Geldiniz. %%firstname%% %%lastname%% için yeni hesabınız açılmıştır. Kullanıcı adınız %%username%%. %%url%% bu bağlantıya tıklayarak şifrenizi oluşturunuz"
 Newspaper = "Gazete"
@@ -885,7 +885,7 @@ no_email_address = "E-posta adresi eksik."
 no_items_selected = "Kayıt seçilmedi"
 no_proxied_user = "Proxied kullanıcı yok (kendiniz için istekte bulunun)"
 nohit_active_filters = "Bu arama için bir veya daha fazla faset filtresi uygulanmış. Filtreleri kaldırırsanız daha fazla sonuç alabilirsiniz."
-nohit_change_tab = ""%%activeTab%%" sekmesi içinde arama yapmaktasınız. Diğer sekmelerin birisi içinde bir şeyler bulabilirsiniz:"
+nohit_change_tab = '"%%activeTab%%" sekmesi içinde arama yapmaktasınız. Diğer sekmelerin birisi içinde bir şeyler bulabilirsiniz:'
 nohit_filters = "Bu aramaya uygulanan filtreler"
 nohit_heading = "Sonuç bulunamadı!"
 nohit_lookfor_html = "Aramanız - <strong>%%lookfor%%</strong> - herhangi bir kaynakla eşleşmedi."
@@ -958,7 +958,7 @@ od_code_resource_not_found = "Başlık bulunamadı"
 od_content = "Overdrive İçeriği"
 od_dl_formats = "Desteklenen İndirme Formatları"
 od_docheckout_failure = "Bu başlık ödünç alınamadı."
-od_docheckout_success = "Bu başlık starafınızdan ödünç alındı. %%expireDate%%" Tarihinde sona eriyor"
+od_docheckout_success = 'Bu başlık starafınızdan ödünç alındı. %%expireDate%%" Tarihinde sona eriyor'
 od_early_return = "Overdrive Erken İade"
 od_ebook-epub-adobe = "Adobe EPUB eKitap"
 od_ebook-epub-open = "EPUB eKitabı Aç"
@@ -986,7 +986,7 @@ od_info_unavail = "Bu bilgi şu anda kullanılamıyor."
 od_is_checkedout = "Bu başlığı ödünç alabilirsiniz. %%due_date%% tarihinde süre bitecek."
 od_is_on_hold = "Bu başlığı ayırttınız"
 od_loans = "Overdrive Ödünç Vermeleri"
-od_mycontent_help = "Bu başlıkları indirme hakkında bilgi ve yardım için, <a href="%%url%%">Overdrive Yardım</a> bağlantısına tıklayınız."
+od_mycontent_help = 'Bu başlıkları indirme hakkında bilgi ve yardım için, <a href="%%url%%">Overdrive Yardım</a> bağlantısına tıklayınız.'
 od_none_found = "Başlık bulunamadı."
 od_return_failure = "Bu başlık iade edilmedi."
 od_return_success = "Bu başlık iade edildi."
@@ -1081,7 +1081,7 @@ profile_update = "İsteğiniz üzerine profiliniz güncellendi."
 pronounced = "belirgin"
 Provider = "Tedarikçi"
 proxied_user = "Proxied kullanıcı için istekte bulunun"
-proxy_hold_place_success_html = "Proxy isteğiniz başarılı oldu. <a href="%%url%%">Ayırtma ve geri çağırma işlemleriniz</a>."
+proxy_hold_place_success_html = 'Proxy isteğiniz başarılı oldu. <a href="%%url%%">Ayırtma ve geri çağırma işlemleriniz</a>.'
 Public = "Kamusal"
 public_list_indicator = "Kamusal"
 Publication = "Yayın"
@@ -1151,7 +1151,7 @@ Refine Results = "Sonuçları Daraltın"
 Region = "Bölge"
 relais_available = "Bu kayda Kütüphanelerarası Ödünç Verme yoluyla ulaşılabilir. Talep etmek ister misiniz?"
 relais_checking = "Kullanılabilirliği kontrol ediliyor..."
-relais_error_html = "Bu istekle ilgili bir sorun oluştu. <a href="%%url%%" target='new'>Buraya tıklayın</a> Kütüphaneler arası ödünç verme web sitesini kullanarak bu öğeyi istemek için."
+relais_error_html = 'Bu istekle ilgili bir sorun oluştu. <a href="%%url%%" target='new'>Buraya tıklayın</a> Kütüphaneler arası ödünç verme web sitesini kullanarak bu öğeyi istemek için.'
 relais_request = "Kütüphaneler Arası Ödünç Verme İsteği"
 relais_requesting = "İsteniyor..."
 relais_search = "Kütüphanelerarası Ödünç Vermeyi Ara"
@@ -1324,10 +1324,10 @@ storage_retrieval_request_invalid_pickup = "Geçersiz yer girildi. Lütfen tekra
 storage_retrieval_request_issue = "Tarih"
 storage_retrieval_request_place_fail_missing = "İsteğiniz başarısız. Bazı veriler eksik. Lütfen detayli bilgi için ödünç verme masasına başvurunuz."
 storage_retrieval_request_place_success = "İsteğiniz başarılı oldu"
-storage_retrieval_request_place_success_html = "İsteğiniz başarılı oldu <a href="%%url%%">Depolama Alma İstekleri</a>."
+storage_retrieval_request_place_success_html = 'İsteğiniz başarılı oldu <a href="%%url%%">Depolama Alma İstekleri</a>.'
 storage_retrieval_request_place_text = "Depolama Alma İstekleri Yeri"
 storage_retrieval_request_processed = "İşlendi"
-storage_retrieval_request_profile_html = "Depolama alma istek bilgileri için, Lütfen kütüphane katalog profilinize gidin.<a href="%%url%%">Profiliniz</a>."
+storage_retrieval_request_profile_html = 'Depolama alma istek bilgileri için, Lütfen kütüphane katalog profilinize gidin.<a href="%%url%%">Profiliniz</a>.'
 storage_retrieval_request_reference = "Referans"
 storage_retrieval_request_selected_item = "Seçilmiş Kayıt"
 storage_retrieval_request_submit_text = "İstek yeri"
@@ -1403,7 +1403,7 @@ total_saved_items = "Toplam Kayıtlı Öğeler"
 total_tags = "Toplam Etiketler"
 total_users = "Toplam Kullanıcılar"
 Transliterated Title = "Çeviri Başlığı"
-tree_search_limit_reached_html = "Aramanız çok fazla sonuç verdi. Bu yapıda gösterilemiyor. Sadece ilk <b>%%limit%%</b> kayıt gösteriliyor. Tüm arama için <a id="fullSearchLink" href="%%url%%" target="_blank">'e tıklayın.</a>"
+tree_search_limit_reached_html = 'Aramanız çok fazla sonuç verdi. Bu yapıda gösterilemiyor. Sadece ilk <b>%%limit%%</b> kayıt gösteriliyor. Tüm arama için <a id="fullSearchLink" href="%%url%%" target="_blank">'e tıklayın.</a>'
 trending_items_channel_title = "Trend Olan Kayıtlar"
 unique_tags = "Benzersiz Etiketler"
 University Library = "Üniversite Kütüphanesi"
