--- a/languages/zh.ini
+++ b/languages/zh.ini
@@ -304,7 +304,7 @@ hold_invalid_pickup = "您輸入的領取地址無效，請再試一次"
 hold_login = "登錄 預定和召回信息"
 hold_place = "提交請求"
 hold_place_fail_missing = "您的請求失敗。一些可能數據缺失，請聯繫流通服務台"
-hold_place_success_html = "您的預定成功. <a href="%%url%%">您的預約和召回</a>."
+hold_place_success_html = '您的預定成功. <a href="%%url%%">您的預約和召回</a>.'
 hold_queue_position = "排隊位置"
 hold_required_by = "預定保留至"
 hold_success = "您的請求成功"
@@ -379,7 +379,7 @@ Logout = "退出"
 Main Author = "主要作者"
 Manuscript = "手稿"
 Map = "地圖"
-Map View = "地圖視圖"”"
+Map View = '地圖視圖'
 map_results_label = "地址:"
 Maps = "地圖"
 Media Format = "媒體格式"
